Mirror SecureJar JVM opens in scan cache test